deploy: d7bb1bbd43ae972878079d4a511960a2e73fc8ba

--- a/extras/vi-editor.html
+++ b/extras/vi-editor.html
@@ -1060,25 +1060,25 @@
 </div>
 <p>If <code class="docutils literal notranslate"><span class="pre">filename.txt</span></code> exists it will be simply opened. If it doesn’t exist, it will be created.</p>
 <div class="tabbed-set docutils">
-<input checked="checked" id="d65466ea-ef66-4569-821b-cd7fa668572e" name="1bfe9a42-4617-4a97-bb65-36519cfc0d66" type="radio">
-</input><label class="tabbed-label" for="d65466ea-ef66-4569-821b-cd7fa668572e">
+<input checked="checked" id="1d33b0b9-42e1-4057-882f-f9aef2793f37" name="8762ed7a-0805-4ce4-9318-4927272f7cd3" type="radio">
+</input><label class="tabbed-label" for="1d33b0b9-42e1-4057-882f-f9aef2793f37">
 Starting vi</label><div class="tabbed-content docutils">
 <div class="figure align-center">
-<a class="reference internal image-reference" href="../_images/vi-insert-mode.png"><img alt="vi" src="../_images/vi-insert-mode.png" style="width: 650px;" /></a>
+<a class="reference internal image-reference" href="images/vi-insert-mode.png"><img alt="vi" src="images/vi-insert-mode.png" style="width: 650px;" /></a>
 </div>
 </div>
-<input id="3259c5c8-60d6-4879-ad7d-f28d05a1c2b7" name="1bfe9a42-4617-4a97-bb65-36519cfc0d66" type="radio">
-</input><label class="tabbed-label" for="3259c5c8-60d6-4879-ad7d-f28d05a1c2b7">
+<input id="721f65a1-6d86-42e7-a50c-6accd2a0f2a8" name="8762ed7a-0805-4ce4-9318-4927272f7cd3" type="radio">
+</input><label class="tabbed-label" for="721f65a1-6d86-42e7-a50c-6accd2a0f2a8">
 Searching in vi</label><div class="tabbed-content docutils">
 <div class="figure align-center">
-<a class="reference internal image-reference" href="../_images/vi-insert-search.png"><img alt="vi search" src="../_images/vi-insert-search.png" style="width: 600px;" /></a>
+<a class="reference internal image-reference" href="images/vi-insert-search.png"><img alt="vi search" src="images/vi-insert-search.png" style="width: 600px;" /></a>
 </div>
 </div>
-<input id="0e4f1668-cb32-4352-890d-3075a3c1587d" name="1bfe9a42-4617-4a97-bb65-36519cfc0d66" type="radio">
-</input><label class="tabbed-label" for="0e4f1668-cb32-4352-890d-3075a3c1587d">
+<input id="de1f6d8b-75d6-4270-a4a0-eee917a153cc" name="8762ed7a-0805-4ce4-9318-4927272f7cd3" type="radio">
+</input><label class="tabbed-label" for="de1f6d8b-75d6-4270-a4a0-eee917a153cc">
 Saving in vi</label><div class="tabbed-content docutils">
 <div class="figure align-center">
-<a class="reference internal image-reference" href="../_images/vi-save.png"><img alt="vi save" src="../_images/vi-save.png" style="width: 600px;" /></a>
+<a class="reference internal image-reference" href="images/vi-save.png"><img alt="vi save" src="images/vi-save.png" style="width: 600px;" /></a>
 </div>
 </div>
 </div>
