--- a/extras/python-intro.html
+++ b/extras/python-intro.html
@@ -1283,8 +1283,8 @@
 <div class="d-flex col-lg-12 p-2 docutils">
 <div class="card w-100 shadow docutils">
 <div class="card-body docutils">
-<a class="reference internal image-reference" href="../images/logos/Python_logo_and_wordmark.svg"><img alt="Python" class="align-right" src="../images/logos/Python_logo_and_wordmark.svg" width="150px" /></a>
-<a class="reference internal image-reference" href="../images/logos/Jupyter_logo.svg"><img alt="Jupyter" class="align-right" src="../images/logos/Jupyter_logo.svg" width="150px" /></a>
+<a class="reference internal image-reference" href="../_images/Python_logo_and_wordmark.svg"><img alt="Python" class="align-right" src="../_images/Python_logo_and_wordmark.svg" width="150px" /></a>
+<a class="reference internal image-reference" href="../_images/Jupyter_logo.svg"><img alt="Jupyter" class="align-right" src="../_images/Jupyter_logo.svg" width="150px" /></a>
 <p class="card-text"><strong>Learning goals:</strong></p>
 <ul class="simple">
 <li><p class="card-text">To learn the basics of python.</p></li>
@@ -2071,18 +2071,18 @@ dict_values([[&#39;Toosie slide&#39;, &#39;Hotline Bling&#39;], [&#39;Sorry&#39;
 </summary><div class="summary-content card-body docutils">
 <p class="card-text"><strong>Note:</strong> Videos may contain material that some people may find offensive. Watch at your own discretion. YouTube is also a bot unpredictable in what it allows so you may or may not be able to watch the videos.</p>
 <div class="tabbed-set docutils">
-<input checked="checked" id="7af36900-8284-40a5-8fd1-b601dd8ac9a6" name="dc6b3832-c970-454b-80c3-1980c192a24b" type="radio">
-</input><label class="tabbed-label" for="7af36900-8284-40a5-8fd1-b601dd8ac9a6">
+<input checked="checked" id="c86d5610-3cc5-45ba-a351-1f28ebb63474" name="dc71865c-4e17-44be-af10-20cad448adcb" type="radio">
+</input><label class="tabbed-label" for="c86d5610-3cc5-45ba-a351-1f28ebb63474">
 Justin Bieber: </label><div class="tabbed-content docutils">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xQOO2xGQ1Pc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<input id="0fde71f0-1aca-45c2-bbca-4125766de3ed" name="dc6b3832-c970-454b-80c3-1980c192a24b" type="radio">
-</input><label class="tabbed-label" for="0fde71f0-1aca-45c2-bbca-4125766de3ed">
+<input id="8ddc783d-8736-42ee-b722-a8c9aa7cb982" name="dc71865c-4e17-44be-af10-20cad448adcb" type="radio">
+</input><label class="tabbed-label" for="8ddc783d-8736-42ee-b722-a8c9aa7cb982">
 La Femme: </label><div class="tabbed-content docutils">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/iMDwrnLrdgs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<input id="7eb5fd04-9543-42ae-ac4c-3e2c06f0c8f6" name="dc6b3832-c970-454b-80c3-1980c192a24b" type="radio">
-</input><label class="tabbed-label" for="7eb5fd04-9543-42ae-ac4c-3e2c06f0c8f6">
+<input id="e038dad5-14a4-4075-bbe2-a2f0c262393f" name="dc71865c-4e17-44be-af10-20cad448adcb" type="radio">
+</input><label class="tabbed-label" for="e038dad5-14a4-4075-bbe2-a2f0c262393f">
 Drake:</label><div class="tabbed-content docutils">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xWggTb45brM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
