deploy: f555627dc32e63e23774a7b5cce283c511758a2a

--- a/class/ErrorsModule/FinitePrecision.html
+++ b/class/ErrorsModule/FinitePrecision.html
@@ -835,19 +835,19 @@
 <tr class="row-odd"><td><p>real number</p></td>
 <td><p>‘float’</p></td>
 <td><p>32-bit</p></td>
-<td><p>‘1.2E-38’ to ‘3.4E+38’</p></td>
+<td><p><code class="docutils literal notranslate"><span class="pre">1.2E-38</span></code> to <code class="docutils literal notranslate"><span class="pre">3.4E+38</span></code></p></td>
 <td><p>6 digit</p></td>
 </tr>
 <tr class="row-even"><td><p></p></td>
 <td><p>‘double’</p></td>
 <td><p>64-bit</p></td>
-<td><p>‘2.3E-308’ to ‘1.7E+308’</p></td>
+<td><p><code class="docutils literal notranslate"><span class="pre">2.3E-308</span></code> to <code class="docutils literal notranslate"><span class="pre">1.7E+308</span></code></p></td>
 <td><p>15 digit</p></td>
 </tr>
 <tr class="row-odd"><td><p></p></td>
 <td><p>‘long double’</p></td>
 <td><p>80-bit</p></td>
-<td><p>‘3.4E-4932’ to ‘1.1E+4932’</p></td>
+<td><p><code class="docutils literal notranslate"><span class="pre">3.4E-4932</span></code> to <code class="docutils literal notranslate"><span class="pre">1.1E+4932</span></code></p></td>
 <td><p>19 digit</p></td>
 </tr>
 </tbody>
