--- a/class/ErrorsModule/BackwardForwardConditioning.html
+++ b/class/ErrorsModule/BackwardForwardConditioning.html
@@ -28,9 +28,9 @@
     <link rel="stylesheet" type="text/css" href="../../_static/copybutton.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/mystnb.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/sphinx-thebe.css" />
-    <link rel="stylesheet" type="text/css" href="../../_static/custom_layouts.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/extra.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/pdf_print.css" />
+    <link rel="stylesheet" type="text/css" href="../../_static/custom_layouts.css" />
     <link media="all" rel="stylesheet" type="text/css" href="https://dokie.li/media/css/dokieli.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/panels-main.c949a650a448cc0ae9fd3441c0e17fb0.css" />
     <link rel="stylesheet" type="text/css" href="../../_static/panels-variables.06eb56fa6e07937060861dad626602ad.css" />
@@ -552,7 +552,7 @@
 <li><p><strong>condition number</strong>, <span class="math notranslate nohighlight">\(\mathcal{C}=\frac{E_f}{E_b}\)</span>.</p></li>
 </ul>
 <p>Note that these definitions are not precise in the sense that they leave a few choices open, such as whether <span class="math notranslate nohighlight">\(E_f\)</span> and <span class="math notranslate nohighlight">\(E_b\)</span> are absolute or relative errors.  However, independent of this choice, a larger condition number <span class="math notranslate nohighlight">\(\mathcal{C}\)</span> indicates a more poorly conditioned problem.  As such, the relative magnitude of <span class="math notranslate nohighlight">\(\mathcal{C}\)</span> can be used to evaluate different formulations of a given mathematical problem to decide which formulation is better conditioned.</p>
-<p>In our example above where we solve the differential equation analytically, the perturbed solution <span class="math notranslate nohighlight">\(\tilda{x}(t)\)</span> satisfies the differential equation exactly so the only source of backward error here is the initial condition so <span class="math notranslate nohighlight">\(E_b=\epsilon\)</span>.  The forward error is also fairly straightforward as <span class="math notranslate nohighlight">\(E_f = |x(t)-\tilde{x}(t)| = \epsilon e^t\)</span>.  So here we see the condition number</p>
+<p>In our example above where we solve the differential equation analytically, the perturbed solution <span class="math notranslate nohighlight">\(\tilde{x}(t)\)</span> satisfies the differential equation exactly so the only source of backward error here is the initial condition so <span class="math notranslate nohighlight">\(E_b=\epsilon\)</span>.  The forward error is also fairly straightforward as <span class="math notranslate nohighlight">\(E_f = |x(t)-\tilde{x}(t)| = \epsilon\, e^t\)</span>.  So here we see the condition number</p>
 <div class="math notranslate nohighlight">
 \[\mathcal{C} =  \frac{E_f}{E_b} = e^t.\]</div>
 <p>The condition number here grows with time.  What this means is that if we refine our question to something like: What is <span class="math notranslate nohighlight">\(x(T)\)</span> for <span class="math notranslate nohighlight">\(T=0.5\)</span>?  The condition number for this more precise problem is <span class="math notranslate nohighlight">\(\mathcal{C}=e^{0.5}\approx 1.64\)</span> which makes this a reasonable question to ask (i.e. is reasonably well-conditioned).  However, if you ask the question: What is <span class="math notranslate nohighlight">\(x(T)\)</span> for <span class="math notranslate nohighlight">\(T=25\)</span>? then the condition number is <span class="math notranslate nohighlight">\(\mathcal{C}=e^{25} \approx 7\times 10^{10}\)</span> which is a very poorly conditioned problem, meaning it is not really a question you can give a meaningful answer to.</p>
