deploy: 2a40c9d44122fbba59a280efd59915d211dfb16f

--- a/class/InterpFit/LagrangeForm.html
+++ b/class/InterpFit/LagrangeForm.html
@@ -510,8 +510,8 @@ L_i^n(x)&amp;=\prod_{j=0,j\neq i}^n \frac{(x-x_j)}{(x_i-x_j)},\qquad\qquad i=0,.
 \begin{equation}
 L_i^n(x_k)=\delta_{ki} = 
 \begin{cases}
-1, &amp;  \text{if} k=i  \\
-0, &amp;  \text{if} k\neq i
+1, &amp;  \text{if}\, k=i  \\
+0, &amp;  \text{if}\, k\neq i
 \end{cases}
 \end{equation}
 \end{split}\]</div>
