--- a/class/InterpFit/InterpErrors.html
+++ b/class/InterpFit/InterpErrors.html
@@ -523,7 +523,8 @@
 <blockquote>
 <div><p>Theorem: Given <em>distinct</em> <span class="math notranslate nohighlight">\(x_0, x_1, ... , x_n\)</span> in an interval <span class="math notranslate nohighlight">\([a,b]\)</span>, and with <span class="math notranslate nohighlight">\(f(x)\in C^{n+1}[a,b]\)</span>,
 for any <span class="math notranslate nohighlight">\(x\in[a,b]\)</span>  there exists <span class="math notranslate nohighlight">\(\xi\in(a,b)\)</span> such that</p>
-<p>$<span class="math notranslate nohighlight">\(\begin{equation} f(x)-p_n(x) = \frac{f^{n+1}(\xi)}{(n+1)!}\prod_{j=0}^n (x-x_j). \end{equation}\)</span>$ <code class="xref eq docutils literal notranslate"><span class="pre">inter_err</span></code></p>
+<div class="math notranslate nohighlight">
+\[\begin{equation} f(x)-p_n(x) = \frac{f^{n+1}(\xi)}{(n+1)!}\prod_{j=0}^n (x-x_j). \end{equation} {eq}`inter_err`\]</div>
 </div></blockquote>
 <p>Proof: Take some fixed <span class="math notranslate nohighlight">\(x\in[a,b]\)</span>.  If <span class="math notranslate nohighlight">\(x=x_k\)</span> for some <span class="math notranslate nohighlight">\(k\)</span> then the error formula <span class="xref std std-ref">inter_err</span> gives zero (which is, indeed the true error as the interpolating polynomial agrees with the function at node points by definition).  If <span class="math notranslate nohighlight">\(x\neq x_k\)</span>, then let’s define an auxiliary function</p>
 <div class="math notranslate nohighlight">
