--- a/class/InterpFit/Splines.html
+++ b/class/InterpFit/Splines.html
@@ -150,7 +150,7 @@
 </ul>
 <p aria-level="2" class="caption" role="heading">
  <span class="caption-text">
-  Part 2 - Interpolation and Curve Fitting
+  Part 2 - Interpolation
  </span>
 </p>
 <ul class="current nav bd-sidenav">
