--- a/class/week12/homework.html
+++ b/class/week12/homework.html
@@ -148,7 +148,7 @@
 </ul>
 <p aria-level="2" class="caption" role="heading">
  <span class="caption-text">
-  Part 2 - Interpolation and Curve Fitting
+  Part 2 - Interpolation
  </span>
 </p>
 <ul class="nav bd-sidenav">
