--- a/extras/python-intro.html
+++ b/extras/python-intro.html
@@ -148,7 +148,7 @@
 </ul>
 <p aria-level="2" class="caption" role="heading">
  <span class="caption-text">
-  Part 2 - Interpolation and Curve Fitting
+  Part 2 - Interpolation
  </span>
 </p>
 <ul class="nav bd-sidenav">
@@ -1718,18 +1718,18 @@ dict_values([[&#39;Toosie slide&#39;, &#39;Hotline Bling&#39;], [&#39;Sorry&#39;
 </summary><div class="summary-content card-body docutils">
 <p class="card-text"><strong>Note:</strong> Videos may contain material that some people may find offensive. Watch at your own discretion. YouTube is also a bot unpredictable in what it allows so you may or may not be able to watch the videos.</p>
 <div class="tabbed-set docutils">
-<input checked="checked" id="542c51e7-47af-4b0f-9628-1d01f0bc41ba" name="bb6f9e93-6506-463e-8728-e29ac6f78e90" type="radio">
-</input><label class="tabbed-label" for="542c51e7-47af-4b0f-9628-1d01f0bc41ba">
+<input checked="checked" id="da4ca720-be62-4d07-9d68-1815ddf79b1d" name="3cc26033-0798-4d61-a9ae-80ad63aac143" type="radio">
+</input><label class="tabbed-label" for="da4ca720-be62-4d07-9d68-1815ddf79b1d">
 Justin Bieber: </label><div class="tabbed-content docutils">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xQOO2xGQ1Pc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<input id="a0717397-08b3-4c43-8430-d1dd49304971" name="bb6f9e93-6506-463e-8728-e29ac6f78e90" type="radio">
-</input><label class="tabbed-label" for="a0717397-08b3-4c43-8430-d1dd49304971">
+<input id="2be55a5b-540c-4177-a978-c1bcbb198406" name="3cc26033-0798-4d61-a9ae-80ad63aac143" type="radio">
+</input><label class="tabbed-label" for="2be55a5b-540c-4177-a978-c1bcbb198406">
 La Femme: </label><div class="tabbed-content docutils">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/iMDwrnLrdgs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<input id="2559c568-32eb-4535-80bb-925abb90d9c8" name="bb6f9e93-6506-463e-8728-e29ac6f78e90" type="radio">
-</input><label class="tabbed-label" for="2559c568-32eb-4535-80bb-925abb90d9c8">
+<input id="b12bf76b-c080-4334-8121-1501897c19bf" name="3cc26033-0798-4d61-a9ae-80ad63aac143" type="radio">
+</input><label class="tabbed-label" for="b12bf76b-c080-4334-8121-1501897c19bf">
 Drake:</label><div class="tabbed-content docutils">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/xWggTb45brM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
