--- a/extras/vi-editor.html
+++ b/extras/vi-editor.html
@@ -148,7 +148,7 @@
 </ul>
 <p aria-level="2" class="caption" role="heading">
  <span class="caption-text">
-  Part 2 - Interpolation and Curve Fitting
+  Part 2 - Interpolation
  </span>
 </p>
 <ul class="nav bd-sidenav">
@@ -707,22 +707,22 @@
 </div>
 <p>If <code class="docutils literal notranslate"><span class="pre">filename.txt</span></code> exists it will be simply opened. If it doesn’t exist, it will be created.</p>
 <div class="tabbed-set docutils">
-<input checked="checked" id="71336515-e4d3-4213-840e-983ceb54264d" name="b6967914-42e5-4674-9036-266c244338e7" type="radio">
-</input><label class="tabbed-label" for="71336515-e4d3-4213-840e-983ceb54264d">
+<input checked="checked" id="7b44230c-2179-4d91-a5ab-ad9d61fc2914" name="bfb9e6fa-87b5-42c6-a556-6d40ea3cb764" type="radio">
+</input><label class="tabbed-label" for="7b44230c-2179-4d91-a5ab-ad9d61fc2914">
 Starting vi</label><div class="tabbed-content docutils">
 <div class="figure align-center">
 <a class="reference internal image-reference" href="images/vi-insert-mode.png"><img alt="vi" src="images/vi-insert-mode.png" style="width: 650px;" /></a>
 </div>
 </div>
-<input id="9c9992e4-6718-41e3-9cd6-b043525bc212" name="b6967914-42e5-4674-9036-266c244338e7" type="radio">
-</input><label class="tabbed-label" for="9c9992e4-6718-41e3-9cd6-b043525bc212">
+<input id="d8e3f2f4-817e-4bda-9702-d8b1ce7bbdcb" name="bfb9e6fa-87b5-42c6-a556-6d40ea3cb764" type="radio">
+</input><label class="tabbed-label" for="d8e3f2f4-817e-4bda-9702-d8b1ce7bbdcb">
 Searching in vi</label><div class="tabbed-content docutils">
 <div class="figure align-center">
 <a class="reference internal image-reference" href="images/vi-insert-search.png"><img alt="vi search" src="images/vi-insert-search.png" style="width: 600px;" /></a>
 </div>
 </div>
-<input id="a6bd6cc1-efff-4abe-88c1-c10c9a5b13fb" name="b6967914-42e5-4674-9036-266c244338e7" type="radio">
-</input><label class="tabbed-label" for="a6bd6cc1-efff-4abe-88c1-c10c9a5b13fb">
+<input id="1aad1887-1cb3-420c-b0a2-c07101e43e37" name="bfb9e6fa-87b5-42c6-a556-6d40ea3cb764" type="radio">
+</input><label class="tabbed-label" for="1aad1887-1cb3-420c-b0a2-c07101e43e37">
 Saving in vi</label><div class="tabbed-content docutils">
 <div class="figure align-center">
 <a class="reference internal image-reference" href="images/vi-save.png"><img alt="vi save" src="images/vi-save.png" style="width: 600px;" /></a>
