deploy: 37f2576610e002b29ee55fd1985fdcb9ab994b7a

--- a/class/InterpFit/Chebyshev.html
+++ b/class/InterpFit/Chebyshev.html
@@ -597,7 +597,7 @@ T_4(x)&amp;= 8x^4-8x^2+1.
 <p>We then select our Chebyshev points as</p>
 <div class="math notranslate nohighlight">
 \[y_0 = \cos\frac{\pi}{10},\,y_1=\cos \frac{3\pi}{10}\,y_2=\cos \frac{5\pi}{10}\,y_3=\cos \frac{7\pi}{10}\,y_4=\cos \frac{9\pi}{10}.\]</div>
-<p>and construct <span class="math notranslate nohighlight">\(p_4(y)\)</span> for <span class="math notranslate nohighlight">\(f(y)=e^{(y+1)^2/4\)</span> using the standard barycentric Lagrange interpolation routine.</p>
+<p>and construct <span class="math notranslate nohighlight">\(p_4(y)\)</span> for <span class="math notranslate nohighlight">\(f(y)=e^{(y+1)^2/4}\)</span> using the standard barycentric Lagrange interpolation routine.</p>
 </div>
 
     <script type="text/x-thebe-config">
