deploy: e4815a15175a3b71bba4576e59ed52a4ff6958fe

--- a/class/InterpFit/InterpErrors.html
+++ b/class/InterpFit/InterpErrors.html
@@ -711,7 +711,7 @@ for any <span class="math notranslate nohighlight">\(x\in[a,b]\)</span>  there e
 <img alt="../../_images/InterpErrors_9_0.png" src="../../_images/InterpErrors_9_0.png" />
 </div>
 </div>
-<p>In dramatic contrast to what happened with equally spaced points, increasing the number of nodes now has resulted in the interpolating polynomial being nearly indistiguishable form the underlying function <span class="math notranslate nohighlight">\(f(x)\)</span>.  Why this particular choice of nodes is better is the subject of the next section.</p>
+<p>In dramatic contrast to what happened with equally spaced points, increasing the number of nodes now has resulted in the interpolating polynomial being nearly indistiguishable from the underlying function <span class="math notranslate nohighlight">\(f(x)\)</span>.  Why this particular choice of nodes is better is the subject of the next section.</p>
 </div>
 
     <script type="text/x-thebe-config">
