deploy: f30c0a5bc8b82c40fb90564453f9f6da00b303f5

--- a/class/NDiffInt/NumDiffInt_Errors.html
+++ b/class/NDiffInt/NumDiffInt_Errors.html
@@ -399,7 +399,7 @@
 \[\begin{split}
 \begin{align} \epsilon''(x) = &amp; \frac{f^{n+1}(\xi)}{(n+1)!}\left[\sum_{m=0}^n \sum_{k=0}^n \prod_{j=0,j\neq k,m}^n (x-x_j)\right]\\
 &amp; + \frac{f^{n+2}(\xi)\xi''+f^{n+3}(\xi)\xi'}{(n+1)!}\prod_{j=0}^n (x-x_j) \\
-&amp;+ \frac{f^{n+2}(\xi)\xi'}{(n+1)!}\left[\sum_{k=0}^n \prod_{j=0,j\neq k}^n (x-x_j)\right],\end{equation}\end{split}\]</div>
+&amp;+ \frac{f^{n+2}(\xi)\xi'}{(n+1)!}\left[\sum_{k=0}^n \prod_{j=0,j\neq k}^n (x-x_j)\right],\end{align}\end{split}\]</div>
 <p>Evaluating this at one of the gridpoints, say <span class="math notranslate nohighlight">\(x_i\)</span>, simplifies the expression to,</p>
 <div class="math notranslate nohighlight">
 \[
