deploy: 40cff972d0c2cb677051007384424c702d5bc3a2

--- a/class/NDiffInt/Int.html
+++ b/class/NDiffInt/Int.html
@@ -440,7 +440,7 @@ E =  \int_a^b  \frac{f^{n+1}(\xi)}{(n+1)!}\prod_{j=0}^n (x-x_j) dx.
 \[\begin{split}
 \begin{align}
 a_0 &amp;= \int_a^b L_0(x) dx,\\
-&amp;= \int_a^b \frac{x-x_1}{x_0-x_1) dx,\\
+&amp;= \int_a^b \frac{x-x_1}{x_0-x_1} dx,\\
 &amp;= \frac{b-a}{2}.
 \end{align}
 \end{split}\]</div>
