deploy: 7790dcfeba2716fc253ead168326f097b1ed0392

--- a/class/NDiffInt/Int.html
+++ b/class/NDiffInt/Int.html
@@ -492,7 +492,7 @@ E &amp;= \frac{f''(\eta)}{2} \int_{x_0}^{x_1} (x-x_0)(x-x_1) dx,\\
 \[\begin{split}
 \begin{align}
 \int_a^b f(x) dx &amp;= \int_{x^0}^{x_1} f(x) dx + \int_{x^1}^{x_2} f(x) dx + \cdots +\int_{x^{n-1}}^{x_n} f(x) dx,\\
-&amp;= \sum_{j=0}^{n-1} \int_{x_j}^{x_{j+1} f(x) dx,\\
+&amp;= \sum_{j=0}^{n-1} \int_{x_j}^{x_{j+1}} f(x) dx,\\
 &amp;= \sum_{j=0}^{n-1} \frac{h}{2}(f(x_j)+f(x_{j+1})) - \frac{h^3}{12} \sum_{j=0}^{n-1} f''(\xi_j).
 \end{align}
 \end{split}\]</div>
