--- a/class/NDiffInt/GaussianInt.html
+++ b/class/NDiffInt/GaussianInt.html
@@ -494,36 +494,36 @@ q(x) = \sum_{i=0}^{n-1} a_i P_i(x),
 <td class="text-align:center"><p>2</p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p>2</p></td>
-<td class="text-align:center"><p>$<span class="math notranslate nohighlight">\(\pm \frac{1}{\sqrt{3}}\)</span>$</p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\pm \frac{1}{\sqrt{3}}\)</span></p></td>
 <td class="text-align:center"><p>1</p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>3</p></td>
 <td class="text-align:center"><p>0,</p></td>
-<td class="text-align:center"><p>$<span class="math notranslate nohighlight">\(\frac{8}{9},\)</span>$</p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\frac{8}{9},\)</span></p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p></p></td>
-<td class="text-align:center"><p>$<span class="math notranslate nohighlight">\(\pm \sqrt{\frac{3}{5}}\)</span>$</p></td>
-<td class="text-align:center"><p>$<span class="math notranslate nohighlight">\(\frac{5}{9}\)</span>$</p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\pm \sqrt{\frac{3}{5}}\)</span></p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\frac{5}{9}\)</span></p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>4</p></td>
-<td class="text-align:center"><p>$<span class="math notranslate nohighlight">\(\pm \sqrt{\frac{3}{7}-\frac{2}{7}\sqrt{\frac{6}{5}}},\)</span>$</p></td>
-<td class="text-align:center"><p>$<span class="math notranslate nohighlight">\(\frac{18+\sqrt{30}}{36},\)</span>$</p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\pm \sqrt{\frac{3}{7}-\frac{2}{7}\sqrt{\frac{6}{5}}},\)</span></p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\frac{18+\sqrt{30}}{36},\)</span></p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p></p></td>
-<td class="text-align:center"><p>$<span class="math notranslate nohighlight">\(\pm \sqrt{\frac{3}{7}+\frac{2}{7}\sqrt{\frac{6}{5}}}\)</span>$</p></td>
-<td class="text-align:center"><p>$<span class="math notranslate nohighlight">\(\frac{18-\sqrt{30}}{36}\)</span>$</p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\pm \sqrt{\frac{3}{7}+\frac{2}{7}\sqrt{\frac{6}{5}}}\)</span></p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\frac{18-\sqrt{30}}{36}\)</span></p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p>5</p></td>
 <td class="text-align:center"><p>0,</p></td>
-<td class="text-align:center"><p>$<span class="math notranslate nohighlight">\(\frac{128}{225},\)</span>$</p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\frac{128}{225},\)</span></p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p></p></td>
-<td class="text-align:center"><p>$<span class="math notranslate nohighlight">\(\qquad \pm \frac{1}{3}\sqrt{5-2\sqrt{\frac{10}{7}}},\qquad \)</span>$</p></td>
-<td class="text-align:center"><p>$<span class="math notranslate nohighlight">\(\frac{322+13\sqrt{70}}{900},\)</span>$</p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\qquad \pm \frac{1}{3}\sqrt{5-2\sqrt{\frac{10}{7}}},\qquad \)</span></p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\frac{322+13\sqrt{70}}{900},\)</span></p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p></p></td>
-<td class="text-align:center"><p>$<span class="math notranslate nohighlight">\(\pm \frac{1}{3}\sqrt{5+2\sqrt{\frac{10}{7}}}\)</span>$</p></td>
-<td class="text-align:center"><p>$<span class="math notranslate nohighlight">\(\frac{322-13\sqrt{70}}{900}\)</span>$</p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\pm \frac{1}{3}\sqrt{5+2\sqrt{\frac{10}{7}}}\)</span></p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\frac{322-13\sqrt{70}}{900}\)</span></p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p>7</p></td>
 <td class="text-align:center"><p>0,</p></td>
