--- a/class/NDiffInt/GaussianInt.html
+++ b/class/NDiffInt/GaussianInt.html
@@ -518,7 +518,7 @@ q(x) = \sum_{i=0}^{n-1} a_i P_i(x),
 <td class="text-align:center"><p><span class="math notranslate nohighlight">\(\frac{128}{225},\)</span></p></td>
 </tr>
 <tr class="row-odd"><td class="text-align:center"><p></p></td>
-<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\qquad \pm \frac{1}{3}\sqrt{5-2\sqrt{\frac{10}{7}}},\qquad \)</span></p></td>
+<td class="text-align:center"><p><span class="math notranslate nohighlight">\(\pm \frac{1}{3}\sqrt{5-2\sqrt{\frac{10}{7}}},\)</span></p></td>
 <td class="text-align:center"><p><span class="math notranslate nohighlight">\(\frac{322+13\sqrt{70}}{900},\)</span></p></td>
 </tr>
 <tr class="row-even"><td class="text-align:center"><p></p></td>
